<resources>
    <string name="app_name">ProfileDesign</string>
    <string name="action_settings">Settings</string>
    <string name="message_sent_subtext">We have received your message and are working on a resoultion.\nWe will keep you informed over email</string>
    <string name="frank_okiogun">Frank\nOkiogun</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_7">7</string>
    <string name="_0">0</string>
</resources>
