<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
            android:id="@+id/dots_nav"
            android:layout_width="164dp"
            android:layout_height="28dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

        <ImageView
                android:id="@+id/dot1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/code_indicator_default"/>

        <ImageView
                android:id="@+id/dot2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/code_indicator_default"/>

        <ImageView
                android:id="@+id/dot3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/code_indicator_default"/>

        <ImageView
                android:id="@+id/dot4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/code_indicator_default"/>

    </LinearLayout>

    <Button
            android:id="@+id/num_1"
            android:text="@string/_1"
            android:tag="@string/_1"
            style="@style/InputButtonStyle"
            android:background="?attr/selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/dots_nav"
            app:layout_constraintRight_toLeftOf="@id/num_2"/>

    <Button
            android:id="@+id/num_2"
            android:text="@string/_2"
            style="@style/InputButtonStyle"
            android:tag="@string/_2"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintTop_toBottomOf="@id/dots_nav"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <Button
            android:id="@+id/num_3"
            android:text="@string/_3"
            android:tag="@string/_3"
            style="@style/InputButtonStyle"
            android:background="?attr/selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30dp"
            app:layout_constraintTop_toBottomOf="@id/dots_nav"
            app:layout_constraintLeft_toRightOf="@id/num_2"/>

    <Button
            android:id="@+id/num_5"
            android:text="@string/_5"
            android:tag="@string/_5"
            style="@style/InputButtonStyle"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/num_2"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintRight_toRightOf="parent"/>

    <Button
            android:id="@+id/num_4"
            android:text="@string/_4"
            android:tag="@string/_4"
            style="@style/InputButtonStyle"
            android:background="?attr/selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toLeftOf="@id/num_5"
            app:layout_constraintTop_toBottomOf="@id/num_1"/>

    <Button
            android:id="@+id/num_6"
            android:text="@string/_6"
            android:tag="@string/_6"
            style="@style/InputButtonStyle"
            android:layout_width="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/num_3"
            app:layout_constraintLeft_toRightOf="@id/num_5"/>

    <Button
            android:id="@+id/num_8"
            android:text="@string/_8"
            android:tag="@string/_8"
            style="@style/InputButtonStyle"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintTop_toBottomOf="@id/num_5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <Button
            android:id="@+id/num_9"
            android:text="@string/_9"
            android:tag="@string/_9"
            style="@style/InputButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintTop_toBottomOf="@id/num_6"
            app:layout_constraintLeft_toRightOf="@id/num_8"/>

    <Button
            android:id="@+id/num_7"
            android:text="@string/_7"
            android:tag="@string/_7"
            style="@style/InputButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintRight_toLeftOf="@id/num_8"
            app:layout_constraintTop_toBottomOf="@id/num_4"/>

    <Button
            android:id="@+id/num_0"
            android:text="@string/_0"
            android:tag="@string/_0"
            style="@style/InputButtonStyle"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintTop_toBottomOf="@id/num_8"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <ImageButton
            android:id="@+id/num_10"
            android:src="@drawable/back"
            android:scaleType="centerInside"
            style="@style/InputButtonStyle"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/dimen_30dp"
            android:layout_marginTop="5dp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:layout_constraintTop_toBottomOf="@id/num_9"
            app:layout_constraintLeft_toRightOf="@id/num_0"/>

</android.support.constraint.ConstraintLayout>